[tool.poetry]
name = "combpyter"
version = "0.0.1"
description = ""
authors = ["Benjamin Hackl <devel@benjamin-hackl.at>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.22.3"
matplotlib = {version = "^3.5.1", extras = ["plot"]}

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
