[tool.poetry]
name = "combpyter"
version = "0.0.4"
description = "A lightweight Python library for generating and analyzing combinatorial objects."
repository = "https://github.com/behackl/combpyter"
readme = "README.md"
authors = ["Benjamin Hackl <devel@benjamin-hackl.at>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.22.3"
matplotlib = {version = "^3.5.1", extras = ["plot"]}

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
