[project]
name = "combpyter"
version = "0.0.6"
description = "A lightweight Python library for generating and analyzing combinatorial objects."
readme = "README.md"
authors = [
    {name = "Benjamin Hackl", email = "devel@benjamin-hackl.at"},
]
license = {text = "MIT"}
requires-python = "<4.0,>=3.10"
dependencies = [
    "numpy>=2.0.0",
    "matplotlib[plot]>=3.5.1",
]

[project.urls]
repository = "https://github.com/behackl/combpyter"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=6.2.5",
    "ruff>=0.9.10",
]
